# geometry_service

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  REUSE.toml  cliff.toml  committed.toml  pixi.toml
.github/workflows/: build-test.yml  lint.yml  update-lock-files.yml
apps/: CMakeLists.txt  plot_field_map.cpp
cmake/: SHiPGeometryServiceConfig.cmake.in
doxygen/: Doxyfile
include/GeometryService/: G4RayScanner.h  GeometryThread.h  IGeometryService.h  IMagneticFieldService.h  SHiPGeometryService.h  SHiPMagneticFieldService.h
scripts/: release.sh
src/: G4RayScanner.cpp  GeometryThread.cpp  SHiPGeometryService.cpp  SHiPMagneticFieldService.cpp
tests/: CMakeLists.txt  test_geometry_service.cpp  test_geometry_thread.cpp  test_magnetic_field_service.cpp  test_ray_scanner.cpp  test_world.h
